<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/add_to_favorite"
            android:icon="@drawable/ic_add_to_fav"
            android:title="favorites"
            android:iconifiedByDefault="false"
            app:showAsAction="ifRoom" />

</menu>