<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/colorAbu"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.mancj.materialsearchbar.MaterialSearchBar
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            style="@style/MaterialSearchBarLight"
            app:mt_speechMode="true"
            app:mt_hint="Search in here.."
            app:mt_maxSuggestionsCount="10"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:showAsAction="always|collapseActionView"
            android:id="@+id/searchBar" />
    <Spinner android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerNext"
             android:layout_gravity="center"/>

    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swipe">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerNextMatchlist"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/progressBar"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>